[km200] Small changes
Signed-off-by: Markus Eckhardt <github@familie-eckhardt.eu>